--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "gulp-sass": "^5.1.0",
     "postcss-cssnext": "^3.1.1",
     "sass": "^1.53.0"
+  },
+  "devDependencies": {
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify": "^3.0.2"
   }
 }
